name:                flash
version:             0.1.0.0
synopsis:            a simple file hosting service
homepage:            https://github.com/Kwarrtz/flash
license:             BSD3
license-file:        LICENSE
author:              Dathan Ault-McCoy
maintainer:          kwarrtz@icloud.com
copyright:           (c) 2015 Dathan Ault-McCoy
category:            Web
build-type:          Simple
cabal-version:       >=1.18

executable flash
  default-extensions:  TemplateHaskell
                     , QuasiQuotes
                     , OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , ViewPatterns
  build-depends:       base          >=4.7  && <4.8
                     , data-default  >=0.5  && <0.6
                     , text          >=1.1  && <1.3
                     , yesod         >=1.4  && <1.5
                     , stm           >=2.4  && <2.5
                     , conduit       >=1.2  && <1.3
                     , conduit-extra >=1.1  && <1.2
                     , resourcet     >=1.1  && <1.2
                     , bytestring    >=0.10 && <0.11
                     , blaze-markup  >=0.7  && <0.8
                     , shakespeare   >=2.0  && <2.1
                     , containers    >=0.5  && <0.6
  main-is:             Main.hs
  default-language:    Haskell2010